--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,15 +55,29 @@ div {
   display: flex;
   flex-direction: column;
   margin-right: 32px;
-}
-
-.column.large {
-  display: flex;
-  width: 630px;
   font-family: Georgia;
   font-size: 17px;
   color: black;
 }
+
+/*large column*/
+
+.column.large {
+  display: flex;
+  width: 630px;
+  align-items:flex-start;
+  justify-content: space-between;
+
+
+}
+
+.stories {
+  display: flex;
+  flex-flow: row;
+  
+
+}
+
 .image {
   display: flex;
   justify-content: normal;
@@ -91,9 +105,25 @@ div {
 
 }
 
+/*medium column*/
+
 .column.medium {
-
+display: flex;
+width: 300px;
 }
-.column.small {
 
+.cats {
+  background-image: url(../media/images/img-story-1.png);
+}
+
+
+
+/*Small column*/
+.column.small {
+display: flex;
+width: 240px;
+}
+
+.cookie {
+  background-image: url(../media/images/img-news-bite.png);
 }
