--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,10 +149,6 @@ margin: 0;
 /* Footer*/
 
 footer {
-/*
-  align-content: space-between;
-  padding: 120px; */
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -164,21 +160,8 @@ footer {
     font-size: 12px;
     margin: auto;
 }
-
-div {
-    display: block;
-}
-.logo-info{
-
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-
-
-}
-.mytimes {
+footer .title {
   display: inline-block;
-  align-content: center;
   padding-right: 25px;
   font-family: Georgia;
   font-size: 16px;
@@ -186,17 +169,9 @@ div {
   color: white;
   border-right: 2px solid white;
 }
-.copywrite {
-  display: flex;
-  justify-content: center;
-}
+
 
 footer nav {
   display: inline-block;
   padding-left: 25px;
-}
-
-nav span {
-    display: inline-block;
-    padding: 20px 10px;
 }
